--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -13,8 +13,11 @@ $golden-large: 0.618
 $ratio-small: 0.384
 $ratio-large: 0.618
 
-$ratio2-small: 0.12
-$ratio2-large: 0.88
+$ratio2-small: 0.1
+$ratio2-large: 0.9
+
+$size1: 8vh
+$phi: 1.618
 
 // color scheme
 $amount: 10%
