--- a/index.jade
+++ b/index.jade
@@ -11,7 +11,9 @@ html(lang="pl")
   body  
     header
       figure(title="logo")
-      h1 catsnake
+        object(type="image/svg+xml" data="gx/catsnake.svg")
+        figcaption logo
+        
       nav
         ul
           li
