pisanie formuł dla pozycjonowania elementów tak bardzo spoko jest

--- a/css/_resocialize_css.sass
+++ b/css/_resocialize_css.sass
@@ -2,6 +2,9 @@
 //_with css normalize
 //_BEHOLD
 //_resocialize_css.sass
+html
+  text-rendering: optimizeLegibility
+  text-rendering: geometricPrecision
 
 *, *::before, *::after
   margin: 0
@@ -23,8 +26,6 @@
 
 body
   font-family: $font
-  text-rendering: optimizeLegibility
-  text-rendering: geometricPrecision
 
 li
   list-style: none
