--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -26,6 +26,7 @@ $color: #fff
 $color1: #000
 $accent0: #1d4649
 $accent1: #be362f
+$bg: #e1e3e4
 $bl: rgba(0,0,0,0.3)
 
 $red: #e54941
@@ -57,7 +58,7 @@ $gray2: #7f8c8d
 $wetgreen: #365f42
 $wetgreen2: #2e5037
 $purple: #745fc3
-$purle2: #5b49a0
+$purple2: #5b49a0
 $brown: #5d4535
 $brown2: #503b2d
 $plum: #5d345d
