--- a/index.jade
+++ b/index.jade
@@ -17,13 +17,13 @@ html(lang="pl")
       nav
         ul
           li
-            a(href="") link
+            a(href="") link1
           li
-            a(href="") link
+            a(href="") link2
           li
-            a(href="") link
+            a(href="") link3
           li
-            a(href="") link
+            a(href="") link4
             
       section
         h2 no to powiedzmy, że już bez przekleństw
